# THO78-Roborescue

./: .gitignore  Makefile  Makefile.BACKUP.14344  Makefile.BASE.14344  Makefile.LOCAL.1340  Makefile.REMOTE.14344  Makefile.basestation  Makefile.inc  Makefile.lidar  Makefile.local  Makefile.local2  Makefile.modules  README.md  lidar  log.txt  log2.txt  main.cpp  moc_quadcopterwindow.cpp  output.txt
CPI/: Lidar.cpp  Lidar.h  Main.cpp  Makefile  RALCPEncoder.cpp  RALCPEncoder.hpp  Rosbee.cpp  Rosbee.hpp  RosbeeCommand.hpp  SerialUDPSocket.h  Socket.hpp  UDPServer.cpp  UDPServer.hpp  UDPSocket.cpp  UDPSocket.hpp  main.cpp  readme.txt  receiver.cpp
CPI - map & strategy/: GloballyUsedTypes.h  Surroundings.cpp  Surroundings.h  SurroundinsUnitTest.cpp
CPI - map communication/: commandsMap.h
CPI - strategy communication/: commandStrategy.h
CPI-UI/: .cproject  .project  CPI-UI.pro  CPI-UI.pro.user.cc0d9c6  atv.cpp  atv.h  atvwindow.cpp  atvwindow.h  atvwindow.ui  lidar.cpp  lidar.h  lidar.h.autosave  lidarwindow.cpp  lidarwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quadcopter.cpp  quadcopter.h  quadcopterwindow.cpp  quadcopterwindow.h  quadcopterwindow.ui  rosbee.cpp  rosbee.h  rosbeewindow.cpp  rosbeewindow.h  rosbeewindow.ui  test.h  tests.cpp  tests.h
GUI/: CPI-UI.pro  (+43 more)
LIDAR/point_clouds/rotate/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cloud1.csv  cloud2.csv  cloud3.csv  cmake_install.cmake  main.cpp  rotate  rotate.cpp  rotate.h  test.cpp
New Structure/src/sensors/lidar/LidarWithPointCloud/LidarWithPointCloud/: CMakeLists.txt
(+2971 files in other folders)
